force-app/main/default/objects/Action__c/fields/Action_Owner__c.field-meta.xml
<CustomField>
    <fullName>Action_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Action Owner</label>
    <referenceTo>ORCA_Users__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>