force-app/main/default/objects/Action__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Cause</label>
    <referenceTo>Root_Cause__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>