force-app/main/default/objects/Action__c/fields/Strategic_Action__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Action?</label>
    <type>Checkbox</type>
</CustomField>